--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.05.2022 08:47:38</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.05.2022 09:11:51</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -137,7 +137,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Grilovane biftecky z rybich filetu {hejk, sled, uzena treska}, pesto z medvediho cesneku, pecena baby paprika, pohanka s pecenou zeleninou, salatek 149</li><li>Peceny filet z cerstveho candata s pecenou baby paprikou a pestem z medvediho cesneku, pohanka s pecenou zeleninou, salatek 179</li><li>Pomalu dusene hovezi ve sladke omacce se zazvorem, omackou hoisin a korenim peti vuni, jasminova ryze, salatek 149</li><li>Italske rajcatove rizoto s listovym spenatem a pecenymi veprovymi licky, hobliny tvrdeho syra, salatek 169</li><li>Indicke kari s kvetakem, hraskem, syrem halloumi, rajcaty a jogurtem, jasminova ryze 149</li></ol>
+<ol><li>Smazene stripsy z kapra {prorezavany – bez kosti} s thajskym chilli dzemem, jasminova ryze, salatek {L} 149 </li><li>Spagety s uzenym divokym lososem, cherry rajcaty, zelenou cibulkou a petrzelkou {L} 175</li><li>Indicka korma s krutim masem, cerstvym ananasem, cuketami, orisky a kokosovym mlekem, jasminova ryze 149</li><li>Bazanti stehna al Cacciatore {po myslivecku} s paprikami, olivami, zampiony, rajcaty a spetkou tymianu, pecene brambory, salatek 169</li><li>Indicke placicky ze zluteho hrachu a mladeho hrasku s piskavici a rimskym kminem, korenena ryze s cockou, matovy jogurtovy dip, salatek 149</li></ol>
 </td>
 </tr>
 </table>
