--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.05.2022 15:12:21</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.05.2022 07:17:16</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Středa, 18. 05. 2022</h5>
+<h5>Čtvrtek, 19. 05. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Květáková</strong>
@@ -50,64 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 18.5.2022</div>
+<div class="nadpis">Čtvrtek 19.5.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Míša dort</div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Medovník</div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Jogurtová bábovka s mandlemi</div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ovocný salát</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Šopský salát</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Variace bavorských baget </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Kapustová polévka se slaninou v menu <em title="Mléko">7</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Kapustová polévka se slaninou samostatně <em title="Mléko">7</em></div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Sekaná vepřová pečeně, bramborová kaše, okurkový relish <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Indické butter chicken, basmati rýže, koriandr, sezam <em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>350g Koprová omáčka s vařeným vejcem, pečené grenaillle, pažitka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -118,10 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kukuřičný krém s uzenou paprikou</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou </td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Bramborové halušky s uzeným masem a kysaným zelím, škvarky s cibulí</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí znojemská pečeně, dušená jasmínová rýže</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zapečené těstoviny s uzeninou, vejci a smetanou, salát coleslaw</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočka na kyselo s klobásou, volské oko, kyselá okurka, škvarky s cibulí </td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName"> Smažený květák, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka, hráškové pyré se sýrem, grilované rajče, vařené vejce</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine s listovým špenátem a anglickou slaninou zjemněné smetanou, filírovaná kuřecí prsa, parmazán</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak s krůtích prsou na smetanové omáčce z modrého sýra, restované špecle</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny promíchaný citronovým dresinkem, smažené kuřecí stripsy v cornflakes, vařené vejce</td><td class="menuPrice">142,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">Staropramen 0,5L 11° se slevou 11,-Kč na půllitr pro naše stálé sledující po celý den neomezeně (instacena platí celý květen)</td><td class="menuPrice">32,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - Ležák</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° - Výčepní</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Staropramen 12° - Extra chmelená</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Muflon 11° - Šenkýř ALE</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Cool nealko grep </td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Malinovka </td><td class="menuPrice">27,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Vepřový flamendr se zeleninou a čerstvým křenem, bramborové hranolky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smetanová křenová omáčka s uzeným masem, kynuté houskové knedlíky</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí kostky na česneku, bramborové knedlíky, špenát</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí kung-pao se zeleninou a arašídy, dušená jasmínová rýže</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 180g Filet z divokého lososa (exkluzivní kvalita) na roštu, brokolicové pyré s máslem a parmazánem, vařené vejce</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampiony, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">142,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřová panenka obalená  v listovém těstě s listovým špenátem, bramborová kaše s máslem a šnitlíkem, grilovaná karotka</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí gyros v tortille s trhanými listy salátů a zeleninou, smažené bramborové hranolky, tzatziky</td><td class="menuPrice">159,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Staropramen 0,5L 11° se slevou 11,-Kč na půllitr pro naše stálé sledující po celý den neomezeně (instacena platí celý květen)</td><td class="menuPrice">32,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - Ležák</td><td class="menuPrice">41,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° - Výčepní</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Staropramen 12° - Extra chmelená</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Muflon 11° - Šenkýř ALE</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Cool nealko grep </td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -129,74 +77,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount">100 g</td>
-<td class="title">Tvarůžkový tatarák, červená cibulka, feferonka, pažitka,
-		dip ze zakysané smetany a dijonské hořčice, pečivo 1a,3,7,10</td>
-<td class="pricem">149 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Gulášová polévka z hovězího krku s čerstvou majoránkou
-a naší houskou 1a,7</td>
-<td class="pricem">89 Kč</td>
-</tr>
-<tr>
-<td class="amount">180 g</td>
-<td class="title">Grilované karbanátky s opečenými plátky brambor
-		a variací studených omáček 1a,3,7,10</td>
-<td class="pricem">159 Kč</td>
-</tr>
-<tr>
-<td class="amount">1 ks</td>
-<td class="title">Hot Dog s chilli párkem, bbq majonézou, chedarem, rukolou
-		a smaženou cibulkou, salát z kysaného zelí 1a,3,7,10,12</td>
-<td class="pricem">129 Kč</td>
-</tr>
-<tr>
-<td class="amount">400 g</td>
-<td class="title">Pečené vykostěné vepřové koleno na černém pivu s omáčkou
-		z paprik, rajčat a cibule, křen, hořčice, pečivo 1abc,10</td>
-<td class="pricem">219 Kč</td>
-</tr>
-<tr>
-<td class="amount">150 g</td>
-<td class="title">Smažené jalapeňos plněné nivou &amp; cibulové kroužky v pivním
-		těstíčku se zakysanou smetanou a trhaným salátem 1ac,3,7</td>
-<td class="pricem">119 Kč</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-<tr>
-<td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="title">Gin Tonic Okurkový<br/>
-gin / tonic / čerstvá okurka / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Malina<br/>
-malinový gin / tonic  / lesní plody / ovoce / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Zázvorový<br/>
-gin / zázvorový tonik / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Targa Florio<br/>
-gin / citronová limonáda / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-</tbody>
-</table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Hovězí vývar se zeleninou a játrovou zavářkou 1a,3,7,9</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Pečená kuřecí roláda plněná zeleninou a vejci s bramborovou kaší a okurkovým salátem 1a,3,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřový steak zapečený šunkou a uzeným sýrem s hranolky, naší tatarskou omáčkou a trhaným salátem 1a,3,7,10</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">1ks</td><td class="title">Sandwich z naší foccacii s parmskou šunkou, mozzarellou, rajčaty, rukolou a bazalkovým zákysem 1a,3,7</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
